--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
-    <title>  
-      Example Page
-    </title> 
-  </head>
+    
+    <title>Deploy to Azure using GitHub</title>
+     </head>
+
+  <!-- 3. Display the application -->
   <body>
-    <h1>My Heading</h1>
-    <p>My paragraph</p>
+    <a> Have Zeal for being Azure Expert! </a>
   </body>
+
+</html>
