--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
   <head>
-    
-    <title>Deploy to Azure using GitHub</title>
-     </head>
-
-  <!-- 3. Display the application -->
+    <title>  
+      Example Page
+    </title> 
+  </head>
   <body>
-    <a> Have Zeal for being Azure Expert! </a>
+    <h1>My Heading</h1>
+    <p>My paragraph</p>
   </body>
-
 </html>
